--- a/templates/railtech-web.html
+++ b/templates/railtech-web.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No food for dayan</title>
 
-    <script src="https://unpkg.com/@unocss/runtime"></script>
+    <link href="../static/output.css" rel="stylesheet">
 </head>
 
 <body class="font-sans">
