--- a/templates/railtech-web-flowbite.html
+++ b/templates/railtech-web-flowbite.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" /> -->
+    <!-- TAILWIND STYLES -->
     <link href="../static/output.css" rel="stylesheet">
+
+    <!-- ALPINE IMPORT -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
 <body class="bg-gray-900">
@@ -181,6 +185,9 @@
                         placeholder="Search for users">
                 </div>
             </div>
+
+            <h1 class="text-4xl font-bold text-white my-7">Today</h1>
+
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
@@ -195,7 +202,7 @@
                             Name
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Position
+                            TAA ID
                         </th>
                         <th scope="col" class="px-6 py-3">
                             Status
@@ -218,25 +225,22 @@
                         <th scope="row"
                             class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
                             <div class="ps-3">
-                                <div class="relative w-10 mr-10 flex items-center">
-                                    <img class="w-10 h-10 rounded-full absolute left-0" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
-                                        alt="Jese image">
-                                    <img class="w-10 h-10 rounded-full absolute left-1/3" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
-                                        alt="Jese image">
-                                        <img class="w-10 h-10 rounded-full absolute left-2/3" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
-                                        alt="Jese image">
-                                    <img class="w-10 h-10 rounded-full absolute left-full" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
-                                        alt="Jese image">
-                                    
-                                </div>
-                            </div>
-                            <div class="ps-3">
                                 <div class="text-base font-semibold">Maintanence between Bukit Panjang and Cashew </div>
-                                <div class="font-normal text-gray-500">SBST123456789A</div>
+                                <div class="flex flex-row items-center gap-3">
+                                    <!-- <div class="font-normal">SBST123456789A</div> -->
+                                    <div class="flex -space-x-3 rtl:space-x-reverse">
+                                        <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800" src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="">
+                                        <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800" src="https://flowbite.com/docs/images/people/profile-picture-2.jpg" alt="">
+                                        <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800" src="https://flowbite.com/docs/images/people/profile-picture-3.jpg" alt="">
+                                        <a class="flex items-center justify-center w-8 h-8 text-xs font-medium text-white bg-gray-400 border-2 border-white rounded-full hover:bg-gray-500 dark:border-gray-800" href="#">+3</a>
+                                    </div>
+                                    <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">TAR</span>
+                                 </div>
+                                   
                             </div>
                         </th>
                         <td class="px-6 py-4">
-                            React Developer
+                            SBST123456789A
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex items-center">
@@ -248,7 +252,7 @@
                                 user</a>
                         </td>
                     </tr>
-                    <tr
+                    <!-- <tr
                         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-700">
                         <td class="w-4 p-4">
                             <div class="flex items-center">
@@ -370,15 +374,11 @@
                             <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit
                                 user</a>
                         </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
-
     </div>
-
-    <!-- And include the following JavaScript file before the end of the body element -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script> -->
 </body>
 
 </html>
